# xword-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: parse_nyt.py  rewards.py  xword_prompter.py
src/xword_bench/: dataset.py  evaluation.py  get_nyt.py  inference.py  parse_nyt.py  rewards.py  train.py  utils.py
