[project]
name = "xword_bench"
version = "0.1.0"
description = "Tools and benchmarks for crossword solving with LLMs"
authors = [
    { name = "Trenton Chang", email = "ctrenton@umich.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "transformers",
    "trl",
    "datasets"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

